--- a/style.css
+++ b/style.css
@@ -7,3 +7,7 @@ License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: hornet
 */
+
+h1 {
+    color: tomato;
+}
