--- a/style.css
+++ b/style.css
@@ -8,6 +8,19 @@ License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: hornet
 */
 
+body {
+    margin: 0;
+}
+
+#wp-custom-header-video {
+    width: 100%;
+    height: 100vh;
+}
+
 h1 {
     color: tomato;
+}
+
+nav {
+    position: fixed;
 }
